sized down attribution on maps in mobile. moved the fixed top on mobile as well.

--- a/web/app/themes/culturecollide-theme/assets/styles/components/maps/_maps.scss
+++ b/web/app/themes/culturecollide-theme/assets/styles/components/maps/_maps.scss
@@ -9,6 +9,14 @@
   // left: -58px;
 }
 
+.leaflet-control-attribution{
+  &.leaflet-control {
+    @media(max-width: 480px) {
+      font-size: .5rem;
+    }
+  }
+}
+
 .cc-map-marker {
   // position: absolute;
   // top: -40px;
