--- a/web/app/themes/culturecollide-theme/assets/styles/components/waypoints/_waypoints.scss
+++ b/web/app/themes/culturecollide-theme/assets/styles/components/waypoints/_waypoints.scss
@@ -25,6 +25,9 @@
       z-index: 25;
     }
   }
+  @media(max-width: 480px) {
+    top: 5.375rem;
+  }
 }
 
 .map-list-stuck {
